src/snapshots/interpreter__parser__tests__unknown_macros@no_arg_star.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr*`"
---
stmts:
  - Macro:
      name: asdfr
  - Token: Asterisk
errors: []

