src/snapshots/interpreter__parser__tests__unknown_macros@num.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr5`"
---
stmts:
  - Macro:
      name: asdfr
  - Token:
      Number: "5"
errors: []

