src/snapshots/interpreter__parser__tests__unknown_macros@sm.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\asdfr*{pkg}`"
---
stmts:
  - Macro:
      name: asdfr
  - Token: Asterisk
  - Block:
      - Text: pkg
errors: []

